# full-stack-dev

./: dev-core-101-industries-research.txt  readme.md
backend-101/: frameworks_overview.md
backend-101/lesson-9/: main.py  pyproject.toml
backend-101/lesson-9/myenv/: pyvenv.cfg
dev-core 104/: Command_scripts.txt  commands.txt  commands_used.txt  environment_variables.txt  project.txt
dev-core-101/: basic-syntax.py  dev-core-101-basic-syntax.py  dev-core-101-basic-terms.py  dev-core-101-compiled-or-interpreted.md  dev-core-101-computer-specs.md  dev-core-101-exercises-js.js  dev-core-101-exercises-python.py  dev-core-101-exercises-python1.py  dev-core-101-exercises-python2.py  dev-core-101-exercises-python3.py  dev-core-101-finalproject-plan.md  dev-core-101-finalproject.py  dev-core-101-input-output-python.py  dev-core-101-programming-languages-timeline.txt  dev-core-101-task-js.js  dev-core-101-variables-js.js  dev-core-101-variables-python.py  dev-core-101-vs-code-bindings.md  makesandwich.js
dev-core-102/: final_project_text_adventure.py  game_state.json  recipes.txt  task_10_file_handling.py  task_11_error_handling.py  task_12_algorithms_recipes.py  task_13_library_management.py  task_14_todo_app.py  task_1_clean_code_practice.py  task_2_data_structures.py  task_3_input_output.py  task_4_calculate_order.py  task_5_trip_advisor.py  task_6_discount_calculator.py  task_7_sports_statistics.py  task_8_recursive_navigation.py  task_9_recipe_management.py  tasks.json  user_info.txt
dev-ops-101/: .dev-ops-101-intro.txt.swp  command_log.txt  dev-ops-101-intro.txt  (+6 more)
(+92 files in other folders)
