[tool.poetry]
name = "lesson-9"
version = "0.1.0"
description = ""
authors = ["Aida <aidas2211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
